# p1-compute-documentation

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  Makefile  README.md  README.rst  astro.config.mjs  documentation.py  flake.nix  index.html  lumache.py  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yaml  deploy_docs.yaml
.overrides/: home.html
01_p1_dtu_hpc/: index.html
02_p1_ngc_hpc/: index.html
03_p1_gefion_hpc/: index.html
04_learning_resources/: index.html
05_contribute/: index.html
about/: index.html
compute_resources/: index.html
contribute/: index.html
docs/: 01_p1_dtu_hpc.md  02_p1_ngc_hpc.md  03_p1_gefion_hpc.md  05_contribute.md  about.md  compute_resources.md  contact.md  contribute.md  getstarted.md  getting_access.md  hardware_specifications.md  home.md  hpc_facilities.md  index.md  learning_resources.md  requirements.txt  support.md  terms_of_use.md
docs/javascripts/: shortcuts.js
docs/source/: compute-resources.rst  conf.py  contact.rst  contributing.rst  getstarted.rst  index.rst  introduction-to-computing.rst  introtalks.rst  learning-resources.rst  organization.rst  p1-compute-resources.rst  welcome.rst
docs/stylesheets/: extra.css  landing.css
getstarted/: index.html
learning_resources/: index.html
nix/: shell.nix
old/docs/: .readthedocs.yaml  documentation.py
public/: CNAME
search/: search_index.json
src/: content.config.ts
stylesheets/: extra.css
support/: index.html
(+29 files in other folders)
