[project]
name = "p1-compute-documentation"
version = "0.1.0"
description = "The official P1 HPC documentation site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.4.6",
    "mkdocs-glightbox>=0.3.2",
    "mkdocs-material-extensions",
    "pymdown-extensions>=1.1.1",
    "mkdocs-same-dir>=0.1.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-exclude>=1.0.2"
]
